UnifyNetSDK/gen_ctypes_file/_1_original/HK_PlaySDK.h

// 安装类型
typedef enum tagFECPlaceType
{
    FEC_PLACE_WALL    = 0x1,        // 壁装方式     (法线水平)
    FEC_PLACE_FLOOR   = 0x2,        // 地面安装     (法线向上)
    FEC_PLACE_CEILING = 0x3,        // 顶装方式     (法线向下)

}FECPLACETYPE;
typedef enum tagFECCorrectType
{
    FEC_CORRECT_NULL                    = 0x0000, // 不矫正 - (鱼眼原图)
    FEC_CORRECT_PTZ                     = 0x0100, // PTZ
    FEC_CORRECT_180                     = 0x0200, // 180度矫正 - （对应2P） - 顶装/底装
    FEC_CORRECT_360                     = 0x0300, // 360全景矫正 - （对应1P） - 顶装/底装
    FEC_CORRECT_LAT                     = 0x0400, // 纬度展开 - 壁装
    FEC_CORRECT_SEMISPHERE              = 0x0500, // 鱼眼半球矫正 - (球面矫正)
    FEC_CORRECT_CYLINDER                = 0x0600, // 鱼眼圆柱显示 - 顶装/底装
    FEC_CORRECT_CYLINDER_SPLIT          = 0x0700, // 鱼眼切开的圆柱显示 - 顶装/底装
    FEC_CORRECT_PLANET                  = 0x0800, // 鱼眼小行星
    FEC_CORRECT_ARCSPHERE_HORIZONTAL    = 0x0900, // 鱼眼水平弧面 - 壁装
    FEC_CORRECT_ARCSPHERE_VERTICAL      = 0x0A00, // 鱼眼垂直弧面 - 壁装
}FECCORRECTTYPE;
typedef enum tagFECCorrectEffect
{
    FEC_CORRECT_EFFECT_BACK_FACE_CULLING    = 0x100,        // 背面剔除：非0表示启用，为0表示不启用，建议设置整数强转浮点数

}FECCORRECTEFFECT;
typedef struct tagCycleParam
{
    float   fRadiusLeft;    // 圆的最左边X坐标
    float   fRadiusRight;   // 圆的最右边X坐标
    float   fRadiusTop;     // 圆的最上边Y坐标
    float   fRadiusBottom;  // 圆的最下边Y坐标

}CYCLEPARAM;
typedef struct tagPTZParam
{
    float fPTZPositionX;        // PTZ 显示的中心位置 X坐标
    float fPTZPositionY;        // PTZ 显示的中心位置 Y坐标	

}PTZPARAM;
// 色彩结构体
typedef struct tagFECColor
{
    unsigned char nR;     // R分量
    unsigned char nG;	  // G分量
    unsigned char nB;     // B分量
    unsigned char nAlpha; // Alpha分量
}FECCOLOR;
//PTZ框选结构体
typedef struct tagFECRectF
{
    float fTop;
    float fBottom;
    float fLeft;
    float fRight;
}FECRECTF;
typedef struct tagFECParam
{
    unsigned int    nUpDateType;            // 更新的类型
    unsigned int    nPlaceAndCorrect;       // 安装方式和矫正方式，只能用于获取，SetParam的时候无效,该值表示安装方式和矫正方式的和
    PTZPARAM        stPTZParam;             // PTZ 校正的参数
    CYCLEPARAM      stCycleParam;           // 鱼眼图像圆心参数
    float           fZoom;                  // PTZ 显示的范围参数
    float           fWideScanOffset;        // 180或者360度校正的偏移角度
    FECCOLOR        stPTZColor;             // PTZ颜色
    FECRECTF        stPTZSelct;             // PTZ选择区域
    unsigned int    nCut;                   //鱼眼原图是否进行裁剪以填充整个窗口（仅作用于鱼眼原图）
    int             nResver[10];            // 保留字段
}FISHEYEPARAM;
// PTZ在原始鱼眼图上轮廓的显示模式
typedef enum tagFECShowMode
{
    FEC_PTZ_OUTLINE_NULL,   // 不显示
    FEC_PTZ_OUTLINE_RECT,   // 矩形显示
    FEC_PTZ_OUTLINE_RANGE,  // 真实区域显示
}FECSHOWMODE;
// 旋转单元结构体
typedef struct tagPLAYM4SRTransformElement
{
    float fAxisX;
    float fAxisY;
    float fAxisZ;
    float fValue; // 旋转的角度

}PLAYM4SRTRANSFERELEMENT;
// 旋转组合参数
typedef struct tagPLAYM4SRTransformParam
{
    PLAYM4SRTRANSFERELEMENT* pTransformElement;		// 旋转的坐标轴
    unsigned int		     nTransformCount;		// 旋转的组合次数
}PLAYM4SRTRANSFERPARAM;
PLAYM4_API BOOL __stdcall PlayM4_FEC_Rotate(LONG nPort, PLAYM4SRTRANSFERPARAM *pstRotateParam);///<此接口为不建议使用接口(老球面鱼眼旋转接口)
//////////////////////**************************/////////////////////////


// 视角变换类型
typedef enum tagPLAYM4HRViewParamType
{
    PLAYM4_HR_VPT_ROTATION_X       = 0x1,          ///<水平旋转
    PLAYM4_HR_VPT_ROTATION_Y       = 0x2,          ///<垂直旋转
    PLAYM4_HR_VPT_SCALE            = 0x3,          ///<缩放(其绝对值为浮点型0值时为黑屏-正常效果)
}PLAYM4HRVIEWPARAMTYPE;
// 鱼眼3D模型参数
typedef enum tagPLAYM4FEC3DModelParam
{
    PLAYM4_FEC_3DMP_CYLINDER_HEIGHT              = 0x1,       ///< 圆柱模型高
    PLAYM4_FEC_3DMP_CYLINDER_RADIUS              = 0x2,       ///< 圆柱模型半径
}PLAYM4FEC3DMODELPARAM;
// 特定视角状态
typedef enum tagPLAYM4FECSpecialViewType
{
    PLAYM4_FEC_SVT_EDGE                          = 0x1        ///<弧面鱼眼模型与窗口贴边视角
}PLAYM4FECSPECIALVIEWTYPE;
typedef void (__stdcall* FISHEYE_CallBack )( void* pUser, unsigned int nSubPort, unsigned int nCBType, void* hDC, unsigned int nWidth, unsigned int nHeight);
// 启用鱼眼
PLAYM4_API BOOL __stdcall PlayM4_FEC_Enable(LONG nPort);
// 关闭鱼眼模块
PLAYM4_API BOOL __stdcall PlayM4_FEC_Disable(LONG nPort);
// 获取鱼眼矫正处理子端口 [1~31]
PLAYM4_API BOOL __stdcall PlayM4_FEC_GetPort(LONG nPort, unsigned int* nSubPort, FECPLACETYPE emPlaceType, FECCORRECTTYPE emCorrectType);
// 删除鱼眼矫正处理子端口
PLAYM4_API BOOL __stdcall PlayM4_FEC_DelPort(LONG nPort, unsigned int nSubPort);
// 设置鱼眼矫正参数
PLAYM4_API BOOL __stdcall PlayM4_FEC_SetParam(LONG nPort, unsigned int nSubPort, FISHEYEPARAM* pPara);
// 获取鱼眼矫正参数
PLAYM4_API BOOL __stdcall PlayM4_FEC_GetParam(LONG nPort, unsigned int nSubPort, FISHEYEPARAM* pPara);
// 设置显示窗口，可以随时切换
PLAYM4_API BOOL __stdcall PlayM4_FEC_SetWnd(LONG nPort, unsigned int nSubPort, void* hWnd);
// 设置鱼眼窗口的绘图回调
PLAYM4_API BOOL __stdcall PlayM4_FEC_SetCallBack(LONG nPort, unsigned int nSubPort, FISHEYE_CallBack cbFunc, void* pUser);
// 鱼眼抓图
PLAYM4_API BOOL __stdcall PlayM4_FEC_Capture(LONG nPort, unsigned int nSubPort, unsigned int nType, char* pFileName);
// 鱼眼硬解
PLAYM4_API BOOL __stdcall PlayM4_FEC_SetConfig(LONG nPort,unsigned int nType);