UnifyNetSDK/haikang/hk_playsdk_wrapper.py


enum_tagFECCorrectEffect = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 657

FEC_CORRECT_EFFECT_BACK_FACE_CULLING = 0x100# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 657

FECCORRECTEFFECT = enum_tagFECCorrectEffect# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 657

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 664
class struct_tagCycleParam(Structure):
    pass

struct_tagCycleParam.__slots__ = [
    'fRadiusLeft',
    'fRadiusRight',
    'fRadiusTop',
    'fRadiusBottom',
]
struct_tagCycleParam._fields_ = [
    ('fRadiusLeft', c_float),
    ('fRadiusRight', c_float),
    ('fRadiusTop', c_float),
    ('fRadiusBottom', c_float),
]

CYCLEPARAM = struct_tagCycleParam# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 664

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 669
class struct_tagPTZParam(Structure):
    pass

struct_tagPTZParam.__slots__ = [
    'fPTZPositionX',
    'fPTZPositionY',
]
struct_tagPTZParam._fields_ = [
    ('fPTZPositionX', c_float),
    ('fPTZPositionY', c_float),
]

PTZPARAM = struct_tagPTZParam# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 669

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 682
class struct_tagFECColor(Structure):
    pass

struct_tagFECColor.__slots__ = [
    'nR',
    'nG',
    'nB',
    'nAlpha',
]
struct_tagFECColor._fields_ = [
    ('nR', c_ubyte),
    ('nG', c_ubyte),
    ('nB', c_ubyte),
    ('nAlpha', c_ubyte),
]

FECCOLOR = struct_tagFECColor# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 682

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 689
class struct_tagFECRectF(Structure):
    pass

struct_tagFECRectF.__slots__ = [
    'fTop',
    'fBottom',
    'fLeft',
    'fRight',
]
struct_tagFECRectF._fields_ = [
    ('fTop', c_float),
    ('fBottom', c_float),
    ('fLeft', c_float),
    ('fRight', c_float),
]

FECRECTF = struct_tagFECRectF# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 689

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 702
class struct_tagFECParam(Structure):
    pass

struct_tagFECParam.__slots__ = [
    'nUpDateType',
    'nPlaceAndCorrect',
    'stPTZParam',
    'stCycleParam',
    'fZoom',
    'fWideScanOffset',
    'stPTZColor',
    'stPTZSelct',
    'nCut',
    'nResver',
]
struct_tagFECParam._fields_ = [
    ('nUpDateType', c_uint),
    ('nPlaceAndCorrect', c_uint),
    ('stPTZParam', PTZPARAM),
    ('stCycleParam', CYCLEPARAM),
    ('fZoom', c_float),
    ('fWideScanOffset', c_float),
    ('stPTZColor', FECCOLOR),
    ('stPTZSelct', FECRECTF),
    ('nCut', c_uint),
    ('nResver', c_int * int(10)),
]

FISHEYEPARAM = struct_tagFECParam# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 702

enum_tagFECShowMode = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 708

FEC_PTZ_OUTLINE_NULL = 0# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 708

FEC_PTZ_OUTLINE_RECT = (FEC_PTZ_OUTLINE_NULL + 1)# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 708

FEC_PTZ_OUTLINE_RANGE = (FEC_PTZ_OUTLINE_RECT + 1)# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 708

FECSHOWMODE = enum_tagFECShowMode# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 708

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 718
class struct_tagPLAYM4SRTransformElement(Structure):
    pass

struct_tagPLAYM4SRTransformElement.__slots__ = [
    'fAxisX',
    'fAxisY',
    'fAxisZ',
    'fValue',
]
struct_tagPLAYM4SRTransformElement._fields_ = [
    ('fAxisX', c_float),
    ('fAxisY', c_float),
    ('fAxisZ', c_float),
    ('fValue', c_float),
]

PLAYM4SRTRANSFERELEMENT = struct_tagPLAYM4SRTransformElement# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 718

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 723
class struct_tagPLAYM4SRTransformParam(Structure):
    pass

struct_tagPLAYM4SRTransformParam.__slots__ = [
    'pTransformElement',
    'nTransformCount',
]
struct_tagPLAYM4SRTransformParam._fields_ = [
    ('pTransformElement', POINTER(PLAYM4SRTRANSFERELEMENT)),
    ('nTransformCount', c_uint),
]

PLAYM4SRTRANSFERPARAM = struct_tagPLAYM4SRTransformParam# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 723

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 725
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_Rotate", "cdecl"):
    PlayM4_FEC_Rotate = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_Rotate", "cdecl")
    PlayM4_FEC_Rotate.argtypes = [LONG, POINTER(PLAYM4SRTRANSFERPARAM)]
    PlayM4_FEC_Rotate.restype = BOOL

enum_tagPLAYM4HRViewParamType = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 731

PLAYM4_HR_VPT_ROTATION_X = 0x1# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 731

PLAYM4_HR_VPT_ROTATION_Y = 0x2# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 731

PLAYM4_HR_VPT_SCALE = 0x3# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 731

PLAYM4HRVIEWPARAMTYPE = enum_tagPLAYM4HRViewParamType# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 731

enum_tagPLAYM4FEC3DModelParam = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 736

PLAYM4_FEC_3DMP_CYLINDER_HEIGHT = 0x1# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 736

PLAYM4_FEC_3DMP_CYLINDER_RADIUS = 0x2# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 736

PLAYM4FEC3DMODELPARAM = enum_tagPLAYM4FEC3DModelParam# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 736

enum_tagPLAYM4FECSpecialViewType = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 740

PLAYM4_FEC_SVT_EDGE = 0x1# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 740

PLAYM4FECSPECIALVIEWTYPE = enum_tagPLAYM4FECSpecialViewType# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 740

FISHEYE_CallBack = CFUNCTYPE(UNCHECKED(None), POINTER(None), c_uint, c_uint, POINTER(None), c_uint, c_uint)# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 741

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 743
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_Enable", "cdecl"):
    PlayM4_FEC_Enable = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_Enable", "cdecl")
    PlayM4_FEC_Enable.argtypes = [LONG]
    PlayM4_FEC_Enable.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 744
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_Disable", "cdecl"):
    PlayM4_FEC_Disable = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_Disable", "cdecl")
    PlayM4_FEC_Disable.argtypes = [LONG]
    PlayM4_FEC_Disable.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 745
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_GetPort", "cdecl"):
    PlayM4_FEC_GetPort = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_GetPort", "cdecl")
    PlayM4_FEC_GetPort.argtypes = [LONG, POINTER(c_uint), FECPLACETYPE, FECCORRECTTYPE]
    PlayM4_FEC_GetPort.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 746
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_DelPort", "cdecl"):
    PlayM4_FEC_DelPort = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_DelPort", "cdecl")
    PlayM4_FEC_DelPort.argtypes = [LONG, c_uint]
    PlayM4_FEC_DelPort.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 747
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetParam", "cdecl"):
    PlayM4_FEC_SetParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetParam", "cdecl")
    PlayM4_FEC_SetParam.argtypes = [LONG, c_uint, POINTER(FISHEYEPARAM)]
    PlayM4_FEC_SetParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 748
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_GetParam", "cdecl"):
    PlayM4_FEC_GetParam = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_GetParam", "cdecl")
    PlayM4_FEC_GetParam.argtypes = [LONG, c_uint, POINTER(FISHEYEPARAM)]
    PlayM4_FEC_GetParam.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 749
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetWnd", "cdecl"):
    PlayM4_FEC_SetWnd = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetWnd", "cdecl")
    PlayM4_FEC_SetWnd.argtypes = [LONG, c_uint, POINTER(None)]
    PlayM4_FEC_SetWnd.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 750
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetCallBack", "cdecl"):
    PlayM4_FEC_SetCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetCallBack", "cdecl")
    PlayM4_FEC_SetCallBack.argtypes = [LONG, c_uint, FISHEYE_CallBack, POINTER(None)]
    PlayM4_FEC_SetCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 751
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_Capture", "cdecl"):
    PlayM4_FEC_Capture = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_Capture", "cdecl")
    PlayM4_FEC_Capture.argtypes = [LONG, c_uint, c_uint, String]
    PlayM4_FEC_Capture.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 752
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FEC_SetConfig", "cdecl"):
    PlayM4_FEC_SetConfig = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FEC_SetConfig", "cdecl")
    PlayM4_FEC_SetConfig.argtypes = [LONG, c_uint]
    PlayM4_FEC_SetConfig.restype = BOOL
